--- a/Examen3-Angular-main/src/app/proveedor-detalle/proveedor-detalle.component.html
+++ b/Examen3-Angular-main/src/app/proveedor-detalle/proveedor-detalle.component.html
@@ -19,7 +19,7 @@
           </mat-card>
           <mat-card>
             <!-- (click) passes input value to actualizar() and then clears the input -->
-            <button class="add-button" (click)="borrar(proveedor.name, proveedor.id )" >
+            <button class="add-button" (click)="eliminar(proveedor.name, proveedor.id )" >
               Eliminar el proveedor
             </button>
             </mat-card>
